# bundle-rs

./: Cargo.toml  README.md
data/test-1/: expected.txt  game.rs
data/test-2/: expected.txt  main.rs
data/test-2/game/: inner.rs  mod.rs
src/: lib.rs  syntax.rs
